--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:mysql://localhost:3306/dmddb
+spring.datasource.username = rootuser
+spring.datasource.password = rootuser
 
+# Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Hibernate ddl(create, create-drop, update, validate)
+spring.jpa.hibernate.ddl-auto = create
