Added recipe upload and improved state persistence

--- a/frontendVue/package.json
+++ b/frontendVue/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.28",
+    "pinia-plugin-persistedstate": "^3.0.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
