Added add recipe front + upload image backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Hibernate ddl(create, create-drop, update, validate)
 spring.jpa.hibernate.ddl-auto = update
+
+#File related config
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+project.image=frontendVue/src/images
