--- a/frontendVue/package.json
+++ b/frontendVue/package.json
@@ -8,6 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.2",
     "pinia": "^2.0.28",
     "pinia-plugin-persistedstate": "^3.0.1",
     "vue": "^3.2.45",
